# CMPUT655-Project

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
Proposal/icml2023/: icml2023.sty  proposal.tex
codes/: README.emlp.txt  README.plot.txt  __init__.py  emlp-sarsa.py  main.py  plot.tgz  run_sarsa.sh  sarsa.py  sarsa_plots.py  semi_grad_sarsa.py  semi_grad_sarsa_emlp.py  semi_grad_sarsa_eval.py  state_value_plots.py  unit_tests.py  utils.py
codes/algorithms/: algorithms.py  semi_grad_sarsa.py
codes/envs/: __init__.py  custom_minigrid_env.py  custom_minigrid_wrappers.py  envs.py
codes/metrics/: metrics.py
codes/nns/: __init__.py  nns.py  optimistic_init.py
codes/plot_emlp/stats/: MiniGrid-DistShift1-v0_emlp_False_1.npy  MiniGrid-DistShift1-v0_emlp_False_3.npy  MiniGrid-DistShift1-v0_emlp_False_7.npy  MiniGrid-DistShift1-v0_emlp_True_0.npy  MiniGrid-DistShift1-v0_emlp_True_3.npy  MiniGrid-DistShift1-v0_emlp_True_4.npy  (+12 more)
codes/plotter/: plotter.py
codes/plotting/: README.txt  plot_coverage.py  plot_entropy.py  plot_mlp.py  plot_returns.py  plot_tabular.py
configs/: sample_config.json  sample_config_emlp.json  semi_grad_distshift.json  semi_grad_lavagap.json  semi_grad_normalized.json  semi_grad_normalized_distshift.json  semi_grad_normalized_lavagap.json  semi_grad_without_eps.json  tabular_opt_config.json  tabular_opt_distshift_config.json  tabular_opt_emptyenv_config.json  tabular_opt_lavagap_config.json
nb/: test_env.ipynb
nb/.ipynb_checkpoints/: training_sample-checkpoint.ipynb
scripts/: build_container.sh  run_container.sh
(+97 files in other folders)
