[tool.poetry]
name = "cmput655-project"
version = "0.1.0"
description = ""
authors = ["Haruto Tanaka <haruto@ualberta.ca>"]
readme = "README.md"
packages = [{include = "cmput655_project"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26"
torch = "^2.1.0"
torchvision = "^0.16.0"
stable_baselines3 = "^2.2"
matplotlib = "^3.8"
seaborn = "0.13.0"
gymnasium = "^0.29"
minigrid = "^2.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "4.0.9"
flake8 = "^6.0.0"
pylint = "^3.0"
black = "^23.11.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
